--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,10 @@ svg {
     height: 100%;
 }
 
+small {
+    font-size: 0.7em;
+}
+
 button {
     font-size: 20px;
     font-weight: bold;
@@ -595,7 +599,7 @@ button.active:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2px 5px #0008;
     transition: background-color 0.2s;
     pointer-events: auto;
     z-index: 30;
