--- a/src/style.css
+++ b/src/style.css
@@ -525,14 +525,17 @@ button.active:hover {
     font-size: 10px;
     font-weight: bold;
     stroke-width: 1px;
+    text-shadow: 0 2px 4px #000;
 }
 
 /* 座標ラベル (0000 0000) */
 /* 標高ラベル (H 000) */
 .hex-label {
-    font-size: 4.5px;
+    fill: #0008;
+    font-size: 4.0px;
     font-weight: 900;
-    stroke-width: 0.5px;
+    stroke-width: 0.0px;
+    /* text-shadow: 0 1px 2px #000; */
 }
 
 /* 魔力・資源ラベル */
